@startuml

!include runner.wsdi

!include scheduler.wsdi

!include dynamic_gui.wsdi
hide DynamicRoot
hide refreshes_dynamics
hide BlockSignals
hide feed_with_data

!include generic_widget.wsdi

!include task_model.wsdi

package gui.generated #DDDDDD {
    class Ui_scheduler < generated by Qt >
}

package scheduler #FFFFFF {
    class TaskView {
        REMOVE_TASK_CLICKED_SIGNAL
        MOVE_UP_TASK_CLICKED_SIGNAL
        MOVE_DOWN_TASK_CLICKED_SIGNAL
        DATA_CONFIG_SELECTED_SIGNAL
        PARAMS_SET_CONFIG_SELECTED_SIGNAL
        NOT_SPECIFIED_LABEL
        EMPTY_STARTING_POPULATION_LABEL

        index
        scheduler
        groupbox
        data_line
        config_set_line
        population_line
        remove_button
        move_up_button
        move_down_button

        __init__(self, index, scheduler)
        nothing()
        update_task_view(self)
        update_data_config_path(self)
        update_params_config_path(self)
        update_population_config_path(self)
        on_remove_clicked(self)
        on_move_up_clicked(self)
        on_move_down_clicked(self)
        create_data_set(self)
        on_select_data_clicked(self)
        create_config(self)
        on_select_config_set_clicked(self)
        create_population(self)
        create_control_section(self)
        create_task_item(self, layout, title)
    }
    TaskView *--* Scheduler
    TaskView --* AutoUpdater
    TaskView --* DynamicNode

    class Scheduler {
        MAX_NUMBER_OF_TASKS
        NO_OUTPUT_DIRECTORY_SELECTED

        last_directory
        output_dir
        tasks

        __init__(self)
        on_remove_task(self, task)
        on_move_up_task(self, task)
        on_move_down_task(self, task)
        on_data_selected(self, task, selected_filename)
        on_params_set_selected(self, task, selected_filename)
        on_add_task_clicked(self)
        on_clear_tasks_clicked(self)
        on_run_clicked(self)
        on_select_output_dir_clicked(self)
    }
    Scheduler --|> GenericWidget
    Scheduler --* Ui_scheduler
    Scheduler --* TaskModel
    Scheduler --> Runner: creates
}

@enduml
